--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
 == Gear App
 
 This application is intended to give a person riding their bike, an idea of what gear to bring. Using the Forecast API it checks for the weather, and then makes recommendations on what gear to bring.
+
+Can be seen working at bike.labs.aaronmiler.com
