--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,11 @@
-== Gear App
+== Weather or Not - The Gear App
 
-This application is intended to give a person riding their bike, an idea of what gear to bring. Using the Forecast API it checks for the weather, and then makes recommendations on what gear to bring.
+This summer I started riding my bike to work. I often found myself not sure what gear I should bring on a day to day basis, and was checking the forecast constantly. This application, given a date, location, and times. Checks the weather, and gives you suggestions of what gear you should bring on your ride or commute.
 
-Can be seen working at bike.labs.aaronmiler.com[http://bike.labs.aaronmiler.com]
+The application is currently living at bike.labs.aaronmiler.com[http://bike.labs.aaronmiler.com]
+
+This application uses the following services
+
+	- Google Maps v3[https://developers.google.com/maps/documentation/javascript/]
+	- Forecast.io[http://forecast.io/]
+	- Geocoder[http://www.rubygeocoder.com/]
